[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = "4.5.7"
crossterm = "0.27.0"
daemonize = "0.5.0"
notify-rust = "4.11.0"
ratatui = "0.26.3"
sqlx = "0.7.4"
lib = { path = "../lib/" }
tokio = { version = "1.38.0", features = ["full"] }
tokio-macros = { version = "0.2.0-alpha.6" }
dotenvy = "0.15.7"
directories = "5.0.1"
